Fix : list of book cards Fix the ard position when less than 4 are on one line. Fix the text overflow

--- a/assets/css/pages/available-books.css
+++ b/assets/css/pages/available-books.css
@@ -17,7 +17,6 @@
 .books-list-page__list {
     display: flex;
     flex-flow: row wrap;
-    justify-content: center;
     gap: 2.375rem;
     padding: 4.5rem 0;
 }
